<resources>
    <string name="app_name">Shaint</string>
    <string name="main">Главная</string>
    <string name="popular_text">Часто выбирают</string>
    <string name="your_popular_text">Вы недавно смотрели</string>
    <string name="to_cart">В корзину</string>
    <string name="search_products">Поиск продуктов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="year">year</string>
    <string name="rating">rating</string>
</resources>